--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
   </style>
 </head>
 <body>
-  <img src="images/kireini.png" alt="images/kireini.png
-">
+  <img src="images/kireini.png" alt="kireini.png">
   <nav>
     <a href="profile.html">profile</a>
     <a href="music.html">music</a>
